--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon index.js"
   },
@@ -13,7 +14,7 @@
     "apollo-server-express": "^3.6.7",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
-    "mongoose": "^6.2.10"
+    "mongoose": "^5.12.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
